external-crates/move/crates/move-compiler/tests/move_check/parser/hexstring_token_eof1.move
module 0x42::M {
    public fun foo() {
        x"
